Feat: Modify post response dto